# Financial-Analysis-Agent

./: .gitignore  README.md  pyproject.toml  report.md
src/fina_1/: crew.py  main.py
src/fina_1/agents/: financial_agents.py
src/fina_1/tasks/: analysis_tasks.py
src/fina_1/tools/: risk_assessment.py  sentiment_analysis.py  yf_tech_analysis.py
